<resources>
    <string name="app_name">SkeletonVpn</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnet</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected.</string>
    <string name="SkeletonVpn_is_disconnected">Skeleton vpn is disconnected.</string>
    <string name="check_your_network_connection_and_try_again">Please check your network connection and try again.</string>
    <string name="Error">Error</string>
    <string name="Error_occurred">An error occurred.</string>
    <string name="header_emoji">💀</string>
    <string name="pirate_emoji">☠</string>
    <string name="server_address">Server address</string>
    <string name="port_number">Port number</string>
    <string name="secret">Shared secret</string>
    <string name="unacceptable_inputs">Wrong network address, please check the address again.</string>
    <string name="Exception">Error!</string>
    <string name="disconnected">Disconnected.</string>
</resources>